<resources>
    <string name="btn_list_add">Add PlayList</string>
    <string name="dialog_title">新規再生リスト</string>
    <string name="dialog_msg">新規再生リストのタイトルを入力してください</string>
    <string name="dialog_btn_ok">作成</string>
    <string name="dialog_btn_ng">キャンセル</string>
    <string name="tentative_text">テスト</string>
    <string name="duplicateName_ng">名前が重複しているため新規プレイリストの作成に失敗しました</string>
    <string name="make_playlist_cancel">新規プレイリストの作成をキャンセルしました</string>
    <string name="app_name">OtokakeAndroid</string>
    <string name="dummy_text">ダミーテキスト</string>
    <string name="ble_not_supported">この端末でBLE通信はサポートされていません。</string>
    <string name="bluetooth_enabled">Bluetoothが有効化されました。</string>
    <string name="bluetooth_not_enabled_warning">Bluetoothが無効の場合アプリを使用することができません。</string>
    <string name="search_device">デバイスを検索</string>
    <string name="access_fine_location_denied_warning">位置情報へのアクセスを許可しない場合、この機能を使用できません。</string>
    <string name="disconnect_device">切断</string>
    <string name="left_device">左足</string>
    <string name="right_device">右足</string>
    <string name="sensor_1">センサ1</string>
    <string name="sensor_2">センサ2</string>
    <string name="start_button_string">START_MUSIC</string>
    <string name="stop_button_string">STOP_MUSIC</string>
    <string name="bluetooth_event_string">BLUETOOTH_EVENT</string>
    <string name="text_string">NULL</string>
    <string name="change_footsteps">足音の変更</string>
    <string name="boyon">ボヨン</string>
    <string name="japanese_drum">和太鼓</string>
    <string name="percent">%</string>
    <string name="cancel">キャンセル</string>
    <string name="downloading_music">曲をダウンロード中</string>
    <string name="download_music_failed_title">曲のダウンロードに失敗</string>
    <string name="download_music_failed_message">曲のダウンロードに失敗しました．もう一度お試しください．</string>
    <string name="get_music_list_failed_title">曲一覧の取得に失敗</string>
    <string name="get_music_list_failed_message">曲一覧の取得に失敗しました．もう一度お試しください．</string>
    <string name="ok">OK</string>
    <string name="score_string">score</string>
    <string name="best_score_string">score_perfect</string>
    <string name="normal_score_string">score_good</string>
    <string name="bad_score_string">score_miss</string>
    <string name="read_external_storage_denied_warning">ストレージへのアクセスを許可しない場合、この機能を使用できません。</string>
    <string name="connect_to_devices">デバイスに接続</string>
    <string name="scanning">検索中...</string>
    <string name="connecting">接続中...</string>
    <string name="disconnected">切断</string>
    <string name="connected">接続済み</string>
    <string name="reconnect">再接続</string>
    <string name="device_not_found_message">デバイスが見つかりませんでした．デバイスの電源がONになっていることを確認してください．</string>
    <string name="bpm">BPM</string>
    <string name="time_minute_dummy">0</string>
    <string name="time_second_dummy">00</string>
    <string name="minus">-</string>
    <string name="dummy_music_title">ミュージック1</string>
    <string name="dummy_music_artist">アーティスト1</string>
    <string name="dummy_bpm_value">120</string>
    <string name="colon">:</string>
    <string name="read_music_buckend_button">読み込み</string>
    <string name="dummy_string">.</string>
    <string name="select_music_edit_text_view">△</string>
    <string name="layout_edit_download_list_text_view">ダウンロード済み</string>
    <string name="layout_edit_not_download_list_text_view">未ダウンロード</string>
    <string name="layout_edit_all_show_button_view">すべて見る</string>
    <string name="layout_list_download_text_view">リスト</string>
    <string name="music_select_string">曲選択中</string>
    <string name="playlist_edit_detail_download">ダウンロード済み</string>
    <string name="playlist_edit_detail_not_download">未ダウンロード</string>
    <string name="playlist_edit_detail_error_list">リストを表示出来ません</string>
    <string name="todo_string">TODO</string>
    <string name="game_score_music_name_string">曲1</string>
    <string name="game_score_total_score_string">今回のスコア</string>
    <string name="perfect_string">Perfect</string>
    <string name="good_string">Good</string>
    <string name="miss_string">Miss</string>
    <string name="game_score_get_storage_id_string">曲の情報が取得できませんでした．</string>
    <string name="game_score_artist">アーティスト</string>
    <string name="playlist_list">再生リスト一覧</string>
    <string name="add_playlist_exception">アクティビティがnullです</string>
</resources>