<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayMusicActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nowFootsteps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/tentative_text"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:layout_gravity="center"
                android:text="@string/text_string"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/start_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56dp"
                    android:text="@string/start_button_string"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <View
                    android:layout_width="30dp"
                    android:layout_height="0dp"/>

                <Button
                    android:id="@+id/stop_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="56dp"
                    android:text="@string/stop_button_string"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/start_button" />
            </LinearLayout>

            <Button
                android:id="@+id/bluetooth_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:text="@string/bluetooth_event_string"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stop_button" />
        </LinearLayout>

        -->

        <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/button_back_arrow"/>
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            <ImageButton
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@drawable/button_play_set_footstep"/>
        </LinearLayout>

        -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/music_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/dummy_music_title"
                android:textColor="@color/black"
                android:textSize="24dp"/>

            <ImageView
                android:id="@+id/music_cover_image_view"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:background="@drawable/otokake_logo"/>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/run_bpm_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_bpm_value"
                    android:textSize="16dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bpm"
                    android:textSize="16dp"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <SeekBar
                android:id="@+id/music_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/music_time_progress_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/time_dummy"
                    android:textSize="16dp"
                    android:textColor="@color/black"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/minus"/>

                <TextView
                    android:id="@+id/music_time_remain_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/time_dummy"
                    android:textSize="16dp"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>
                <ImageButton
                    android:id="@+id/music_rewind_image_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_play_rewind"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>
                <ImageButton
                    android:id="@+id/music_play_or_pause_image_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_play_play"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>
                <ImageButton
                    android:id="@+id/music_skip_image_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_play_skip"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"/>
            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:text="@string/connect_to_devices"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="0.5"
                    android:gravity="center">

                    <View
                        android:id="@+id/notify_left_foot_on_the_ground_view"
                        android:layout_width="40dp"
                        android:layout_height="5dp"
                        android:background="#00ffffff"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/left_device"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/device_connection_status_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/disconnected"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                    <ImageButton
                        android:id="@+id/connect_left_device_image_button"
                        android:layout_width="120dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_reconnect"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="0.5"
                    android:gravity="center">

                    <View
                        android:id="@+id/notify_right_foot_on_the_ground_view"
                        android:layout_width="40dp"
                        android:layout_height="5dp"
                        android:background="#00ffffff"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/right_device"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/device_connection_status_right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/disconnected"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>

                    <ImageButton
                        android:id="@+id/connect_right_device_image_button"
                        android:layout_width="120dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_reconnect"/>
                </LinearLayout>
            </LinearLayout>
                <!--このBluetooth_EVENTボタンは後で消す必要がある．-->
            <Button
                android:id="@+id/bluetooth_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:text="@string/bluetooth_event_string"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stop_button" />
        </LinearLayout>
        </LinearLayout>

</ScrollView>